--- a/assets/css/custom/ui.css
+++ b/assets/css/custom/ui.css
@@ -369,10 +369,6 @@ table {
   font-size: 0;
 }
 
-.ls-0 {
-  letter-spacing: 0;
-}
-
 .tab-show {
   display: none;
 }
@@ -389,81 +385,103 @@ table {
   }
 }
 
-.mo-show {
+.mb-show {
   display: none;
 }
 
 @media all and (max-width: 600px) {
-  .mo-show {
+  .mb-show {
     display: block;
   }
 }
 
 @media all and (max-width: 600px) {
-  .mo-hide {
+  .mb-hide {
     display: none;
   }
 }
 
-.mo-sm-show {
+.sm-show {
   display: none;
 }
 
 @media all and (max-width: 360px) {
-  .mo-sm-show {
+  .sm-show {
     display: block;
   }
 }
 
 @media all and (max-width: 360px) {
-  .mo-sm-hide {
+  .sm-hide {
     display: none;
   }
 }
 
-.mo-xsm-show {
+.xsm-show {
   display: none;
 }
 
 @media all and (max-width: 320px) {
-  .mo-xsm-show {
+  .xsm-show {
     display: block;
   }
 }
 
 @media all and (max-width: 320px) {
-  .mo-xsm-hide {
+  .xsm-hide {
     display: none;
   }
 }
 
 /* =================== layout =================== */
+#page {
+  max-width: 1920px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding-top: 50px;
+  background-color: #fcfcfc;
+  -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 0 16px rgba(0, 0, 0, 0.08);
+}
+
 .l-center {
   max-width: 1080px;
   width: 95%;
   margin: 0 auto;
 }
 
-.empty-content {
-  width: 100%;
-  text-align: center;
-  padding: 50px 0;
-}
-
-.empty-content__img-box {
-  width: 100px;
-  margin: 0 auto;
-  padding-bottom: 20px;
-}
-
-.empty-content__img-box img {
-  width: 100%;
-}
-
-.empty-content__txt {
-  font-weight: 400;
-  color: black;
-  opacity: 0.8;
-}
-
 /* =================== main =================== */
+.board-ttl {
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.room-list-wrap {
+  -webkit-box-shadow: 0 5px 13px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 5px 13px rgba(0, 0, 0, 0.08);
+  padding: 10px;
+}
+
+.room-list {
+  padding: 3px 0;
+  border-top: 1px solid #999;
+}
+
+.room-list:first-child {
+  border-top: 0 none;
+}
+
+.room-list .link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 7px 10px;
+}
