--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -9,13 +9,13 @@
 
 // main board
 .room-list-wrap {
-  box-shadow: 0 5px 13px rgba(0, 0, 0, 0.08);
   padding: 10px;
+  background-color: #f9f9f9;
 }
 
 .room-list {
-  padding: 3px 0;
-  border-top: 1px solid #999;
+  margin: 10px 0;
+  background-color: white;
 
   &:first-child {
     border-top: 0 none;
@@ -25,6 +25,13 @@
     @include flex {
       @include flex-side;
     }
-    padding: 7px 10px;
+
+    padding: 15px 10px;
+    transition: all 0.3s;
+
+    &:hover,
+    &:focus {
+      box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+    }
   }
 }
