font변경, 코인 카드 기본형

--- a/assets/css/custom/ui.css
+++ b/assets/css/custom/ui.css
@@ -145,7 +145,7 @@ wbr {
           box-sizing: border-box;
   font-size: 100%;
   font: inherit;
-  font-family: "helvatica", "noto", "spoqa", sans-serif;
+  font-family: "noto", sans-serif;
   letter-spacing: -0.04em;
   word-break: break-all;
 }
@@ -235,7 +235,7 @@ a {
   outline: 0;
   background-color: transparent;
   text-decoration: none;
-  color: black;
+  color: #333;
   cursor: pointer;
 }
 
@@ -271,90 +271,47 @@ table {
 }
 
 /* =================== fonts =================== */
-/* ---------- open sans ---------- */
+/* ---------- noto sans kr ---------- */
 @font-face {
-  font-family: "open sans";
+  font-family: "noto";
   font-weight: 800;
-  src: url("../../fonts/open_sans/OpenSans-ExtraBold.woff2") format("woff2"), url("../../fonts/open_sans/OpenSans-ExtraBold.woff") format("woff"), url("../../fonts/open_sans/OpenSans-ExtraBold.ttf") format("truetype"), url("../../fonts/open_sans/OpenSans-ExtraBold.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-Black.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-Black.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-Black.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-Black.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "open sans";
-  font-weight: 700;
-  src: url("../../fonts/open_sans/OpenSans-Bold.woff2") format("woff2"), url("../../fonts/open_sans/OpenSans-Bold.woff") format("woff"), url("../../fonts/open_sans/OpenSans-Bold.ttf") format("truetype"), url("../../fonts/open_sans/OpenSans-Bold.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "open sans";
+  font-family: "noto";
   font-weight: 600;
-  src: url("../../fonts/open_sans/OpenSans-SemiBold.woff2") format("woff2"), url("../../fonts/open_sans/OpenSans-SemiBold.woff") format("woff"), url("../../fonts/open_sans/OpenSans-SemiBold.ttf") format("truetype"), url("../../fonts/open_sans/OpenSans-SemiBold.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-Bold.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-Bold.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-Bold.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-Bold.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "open sans";
-  font-weight: 400;
-  src: url("../../fonts/open_sans/OpenSans-Regular.woff2") format("woff2"), url("../../fonts/open_sans/OpenSans-Regular.woff") format("woff"), url("../../fonts/open_sans/OpenSans-Regular.ttf") format("truetype"), url("../../fonts/open_sans/OpenSans-Regular.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "open sans";
-  font-weight: 300;
-  src: url("../../fonts/open_sans/OpenSans-Light.woff2") format("woff2"), url("../../fonts/open_sans/OpenSans-Light.woff") format("woff"), url("../../fonts/open_sans/OpenSans-Light.ttf") format("truetype"), url("../../fonts/open_sans/OpenSans-Light.otf") format("opentype");
-}
-
-/* ---------- poppins ---------- */
-@font-face {
-  font-family: "poppins";
-  font-weight: 900;
-  src: url("../../fonts/poppins/Poppins-Black.woff2") format("woff2"), url("../../fonts/poppins/Poppins-Black.woff") format("woff"), url("../../fonts/poppins/Poppins-Black.ttf") format("truetype"), url("../../fonts/poppins/Poppins-Black.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "poppins";
-  font-weight: 800;
-  src: url("../../fonts/poppins/Poppins-ExtraBold.woff2") format("woff2"), url("../../fonts/poppins/Poppins-ExtraBold.woff") format("woff"), url("../../fonts/poppins/Poppins-ExtraBold.ttf") format("truetype"), url("../../fonts/poppins/Poppins-ExtraBold.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "poppins";
-  font-weight: 700;
-  src: url("../../fonts/poppins/Poppins-Bold.woff2") format("woff2"), url("../../fonts/poppins/Poppins-Bold.woff") format("woff"), url("../../fonts/poppins/Poppins-Bold.ttf") format("truetype"), url("../../fonts/poppins/Poppins-Bold.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "poppins";
-  font-weight: 600;
-  src: url("../../fonts/poppins/Poppins-SemiBold.woff2") format("woff2"), url("../../fonts/poppins/Poppins-SemiBold.woff") format("woff"), url("../../fonts/poppins/Poppins-SemiBold.ttf") format("truetype"), url("../../fonts/poppins/Poppins-SemiBold.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "poppins";
+  font-family: "noto";
   font-weight: 500;
-  src: url("../../fonts/poppins/Poppins-Medium.woff2") format("woff2"), url("../../fonts/poppins/Poppins-Medium.woff") format("woff"), url("../../fonts/poppins/Poppins-Medium.ttf") format("truetype"), url("../../fonts/poppins/Poppins-Medium.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-Medium.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-Medium.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-Medium.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-Medium.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "poppins";
+  font-family: "noto";
   font-weight: 400;
-  src: url("../../fonts/poppins/Poppins-Regular.woff2") format("woff2"), url("../../fonts/poppins/Poppins-Regular.woff") format("woff"), url("../../fonts/poppins/Poppins-Regular.ttf") format("truetype"), url("../../fonts/poppins/Poppins-Regular.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-Regular.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-Regular.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-Regular.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-Regular.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "poppins";
+  font-family: "noto";
   font-weight: 300;
-  src: url("../../fonts/poppins/Poppins-Light.woff2") format("woff2"), url("../../fonts/poppins/Poppins-Light.woff") format("woff"), url("../../fonts/poppins/Poppins-Light.ttf") format("truetype"), url("../../fonts/poppins/Poppins-Light.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-Light.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-Light.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-Light.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-Light.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "poppins";
+  font-family: "noto";
   font-weight: 200;
-  src: url("../../fonts/poppins/Poppins-ExtraLight.woff2") format("woff2"), url("../../fonts/poppins/Poppins-ExtraLight.woff") format("woff"), url("../../fonts/poppins/Poppins-ExtraLight.ttf") format("truetype"), url("../../fonts/poppins/Poppins-ExtraLight.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-DemiLight.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-DemiLight.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-DemiLight.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-DemiLight.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "poppins";
+  font-family: "noto";
   font-weight: 100;
-  src: url("../../fonts/poppins/Poppins-Thin.woff2") format("woff2"), url("../../fonts/poppins/Poppins-Thin.woff") format("woff"), url("../../fonts/poppins/Poppins-Thin.ttf") format("truetype"), url("../../fonts/poppins/Poppins-Thin.otf") format("opentype");
+  src: url("../../fonts/notosanskr/NotoSansKR-Thin.woff2") format("woff2"), url("../../fonts/notosanskr/NotoSansKR-Thin.woff") format("woff"), url("../../fonts/notosanskr/NotoSansKR-Thin.ttf") format("truetype"), url("../../fonts/notosanskr/NotoSansKR-Thin.otf") format("opentype");
 }
 
 /* =================== helper =================== */
@@ -433,13 +390,13 @@ table {
   }
 }
 
-/* =================== layout =================== */
+/* =================== common =================== */
 #page {
   max-width: 1920px;
   min-height: 100vh;
   margin: 0 auto;
   padding-top: 50px;
-  background-color: #fcfcfc;
+  background-color: #fafafa;
   -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.08);
           box-shadow: 0 0 16px rgba(0, 0, 0, 0.08);
 }
@@ -448,6 +405,71 @@ table {
   max-width: 1080px;
   width: 95%;
   margin: 0 auto;
+}
+
+.page_ttl {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #333;
+}
+
+.game_board {
+  width: 100%;
+  margin-top: 20px;
+  background-color: white;
+}
+
+.card {
+  width: 200px;
+  height: 320px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+
+.coin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../../images/img/bg_coin.png");
+  border: 1px solid #ddd;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.red {
+  color: #fd2422;
+}
+
+.blue {
+  color: #2c5dc8;
+}
+
+.white {
+  color: #f9f9f9;
+}
+
+.black {
+  color: #201d20;
+}
+
+.green {
+  color: #018b55;
+}
+
+.gold {
+  color: #ffd700;
 }
 
 /* =================== main =================== */
@@ -476,6 +498,7 @@ table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -491,3 +514,5 @@ table {
   -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
           box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* =================== splander =================== */
