--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -144,7 +144,7 @@ wbr {
   box-sizing: border-box;
   font-size: 100%;
   font: inherit;
-  font-family: "helvatica", "noto", "spoqa", sans-serif;
+  font-family: "noto", sans-serif;
   letter-spacing: -0.04em;
   word-break: break-all;
 }
