--- a/assets/scss/utility/_variable.scss
+++ b/assets/scss/utility/_variable.scss
@@ -1,10 +1,10 @@
 // gray color는 따로 사용하고, red등의 컬러 추가해서 사용
 $color-set: (
   text: #333,
-  red: #fd2422,
-  blue: #2c5dc8,
+  red: #e01e1b,
+  blue: #4982fd,
   black: #201d20,
-  green: #018b55,
+  green: #12b342,
   gold: #ffd700,
 );
 
