--- a/assets/scss/layout/_common.scss
+++ b/assets/scss/layout/_common.scss
@@ -39,12 +39,12 @@
   @include bg-op;
   @include bg-url(img, "bg_coin.png");
 
-  border: 1px solid #ddd;
-  // background-color: rgb(165, 162, 13);
-  // box-shadow: 0 1px 0 #000, 1px 2px 0 #000, 2px 3px 0 #000, 3px 3px 0 #000,
-  //   3px 4px 0 #000, 3px 5px 0 #000;
   font-size: rem(20);
   font-weight: 600;
+  text-shadow: 1px 0 0 rgba(255, 255, 255, 0.35),
+    0 1px 0 rgba(255, 255, 255, 0.35), -1px 0 0 rgba(255, 255, 255, 0.35),
+    0 -1px 0 rgba(255, 255, 255, 0.35);
+  // -webkit-text-stroke: 0.2px rgba(255, 255, 255, 0.35);
 }
 
 .red {
