--- a/src/assets/styles/utility/_variable.scss
+++ b/src/assets/styles/utility/_variable.scss
@@ -40,7 +40,8 @@ $ct-width: 1300px;
 // button & badge
 // btn 높이 추가하면 .btn-ht-크기 가 추가된다.
 $btn-height: (
-  md: 54,
+  sm: 30,
+  md: 50,
 );
 
 // btn color 추가하면 .btn-색이름 .btn-bd-색이름 .btn-gst-색이름 이 추가된다.
